2010-02-26  Andreia Gaita  <avidigal@novell.com>

	* Makefile.am: add bridge/ subdir to the build
	* browser-bridge.h: save a ref to the plugin, the curl bridge
	needs it to add tick calls
	* plugin.cpp: (Shutdown) kill the bridge only after shutting
	down the deployment, because it aborts downloaders and the curl
	bridge downloaders need to know if the plugin is shutting down to
	know if they can safely remove tick callbacks
	(Initialize) If the curl bridge is available and activated via
	the env flag, then load it regardless of browser

2010-02-16  Larry Ewing  <lewing@novell.com>

	* plugin.cpp (StreamAsFile): work around some opera evilness and
	avoid a crash where stream->url is lost out from under us.

	Allows Opera to start up moonlight and load the chess app.

2010-02-16  Andreia Gaita  <avidigal@novell.com>

	* plugin.cpp: dup the values coming in from the object tag, chrome
	throws them away immediately

2010-02-13  Larry Ewing  <lewing@novell.com>

	* plugin.cpp, plugin.h: add an instance flag that helps us decide
	if we should attempt normal startup or try to avoid reentering at
	all calls in CreateWindow.

	Works aroud the hang when trying to load moonlight in chromium
	without breaking the firefox startup sequence.

2010-02-05  Sebastien Pouliot  <sebastien@ximian.com>

	* plugin.cpp|h: The default value for AllowHtmlPopupWindow is
	different for same-domain applications (true) and cross-domain
	applications (false) unless it is specifically specified.

2010-01-28  Chris Toshok  <toshok@ximian.com>

	* plugin.cpp (plugin_menu_about): correct url to moonlight-project
	website.


2010-01-28  Andreia Gaita  <avidigal@novell.com>

	* plugin-class.[h.in|cpp]: Use plugin code for
	HtmlObject(Attach|Detach)Event instead of bridge calls

	* plugin-domevents.[h|cpp]: NPAPI implementation
	  of DOM Event listeners, to replace the gecko-specific
	  bridge code

	* plugin.[h|cpp]: Add FF3.6 bridge. Replace bridge calls